GH-0000 fix lmdb finite filter relation rewrite